2004-09-29  H. Peter Anvin  <hpa@users.sourceforge.net>

	* Makefile: Fixed "make clean", removed -Werror for cygwin.
	* z80asm.c (rd_out): implemented out (c),0.

2004-09-28  H. Peter Anvin  <hpa@users.sourceforge.net>

	* z80asm.c (rd_number): Added ouput parameter endptr.  Changed all
	callers.
	* z80asm.c (rd_value): Added support for Zilog-style base
	specification.
	* README: Updated documentation.

2004-09-22  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c (assemble): Bugfixes to make ld (nn),a and ld sp,nn work.

2003-11-19  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: Changed expression handling, bugfixes.
	
2003-10-30  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: Added binary output as hex to listfile.

2003-10-30  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: Added support for quoted strings in defb, added comments,
	added long option support and help/version information.
	* README: Updated documentation.

2002-05-15  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c (rd_expr): Added equations in expr and bugfix
	(assemble): Added if/else/endif

2002-04-28  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* assembler.c: Started changelog